# pip-dependabot-testing

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: update_python_requirements.yml
