[tool.poetry]
name = "pip-dependabot-testing"
version = "0.0.1"
description = "Repo to test GtiHub Actions to run on Dependabot PRs"
authors = ["Chris Swan <@cpswan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"
dnspython = "2.4.1"
inquirerpy = "0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"